--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,3 @@
 REACT_APP_ADMIN_PIN=123456789
 REACT_APP_MODERATOR_PIN=987654321
+REACT_APP_API_BASE=https://tv-shows-reviews-node-server.onrender.com
